--- a/app/src/main/res/layout/commentator_comment_container_layout.xml
+++ b/app/src/main/res/layout/commentator_comment_container_layout.xml
@@ -30,8 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/commentatorNameAndCommentTextView"
-        android:paddingStart="@dimen/space_10"
         android:layout_marginTop="@dimen/space_5"
+        android:paddingStart="@dimen/space_10"
         android:textColor="#979797"
         android:textSize="12sp" />
       <com.mycity4kids.widget.CustomFontTextView
@@ -66,6 +66,7 @@
         android:layout_marginTop="@dimen/space_5"
         android:layout_marginEnd="@dimen/space_20"
         android:padding="5dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_three_verticle_dot_rounded" />
 
 
@@ -107,9 +108,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/commentDateTextView2"
+        android:layout_marginTop="@dimen/space_5"
         android:drawablePadding="6dp"
         android:padding="5dp"
-        android:layout_marginTop="@dimen/space_5"
         android:paddingStart="@dimen/space_10"
         android:textColor="#979797"
         app:drawableTint="#979797" />
@@ -124,8 +125,8 @@
         android:layout_toRightOf="@id/likeCount2"
         android:drawableLeft="@drawable/ic_shape"
         android:drawablePadding="@dimen/space_6"
-        android:textColor="#979797"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textColor="#979797" />
 
       <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/reportCommentContent2"
@@ -136,6 +137,7 @@
         android:layout_marginTop="@dimen/space_5"
         android:layout_marginEnd="@dimen/space_20"
         android:padding="5dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_three_verticle_dot_rounded" />
 
     </RelativeLayout>
