--- a/app/src/main/res/layout/ss_comment_item.xml
+++ b/app/src/main/res/layout/ss_comment_item.xml
@@ -22,7 +22,6 @@
       android:layout_width="@dimen/ad_comments_profile_pic_width"
       android:layout_height="@dimen/ad_comments_profile_pic_width"
       android:layout_alignParentStart="true"
-      android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:contentDescription="@string/author_img"
       android:src="@drawable/default_commentor_img"
@@ -39,9 +38,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="3dp"
-      android:layout_marginLeft="3dp"
       android:layout_toEndOf="@+id/commentorImageView"
-      android:layout_toRightOf="@+id/commentorImageView"
       android:ellipsize="end"
       android:maxLines="1"
       android:paddingLeft="5dp"
@@ -60,7 +57,7 @@
       android:layout_marginTop="@dimen/space_10"
       android:layout_toEndOf="@id/commentorImageView"
       android:ellipsize="end"
-      android:paddingLeft="10dp"
+      android:paddingStart="10dp"
       android:paddingRight="5dp"
       android:singleLine="false"
       android:text=""
@@ -101,13 +98,12 @@
         android:padding="10dp"
         android:textSize="14sp" />
 
-
       <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/replyCommentTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:drawableLeft="@drawable/ic_shape"
+        android:drawableStart="@drawable/ic_shape"
         android:drawablePadding="@dimen/space_5"
         android:padding="10dp"
         android:text="@string/reply"
@@ -128,13 +124,24 @@
         app:fontName="oswald.ttf" />
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/moreOptionImageView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignTop="@+id/dateContainer"
+      android:layout_alignParentEnd="true"
+      android:layout_marginTop="@dimen/space_5"
+      android:layout_marginEnd="5dp"
+      android:padding="8dp"
+      app:srcCompat="@drawable/ic_three_verticle_dot_rounded" />
+
     <com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/replyCountTextView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/dateContainer"
-      android:layout_alignLeft="@+id/dateContainer"
-      android:paddingLeft="5dp"
+      android:layout_alignStart="@+id/dateContainer"
+      android:paddingStart="5dp"
       android:paddingTop="10dp"
       android:paddingBottom="10dp"
       android:text=""
